<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:text="@string/verify_all_information_is_correct" />

    <TextView
        android:id="@+id/textSenderAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:text="@string/sender_s_account" />
    <!-- Display receiver's account information -->
    <TextView
        android:id="@+id/textReceiverAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:text="@string/receiver_s_account" />
    <!-- Display transaction amount -->
    <TextView
        android:id="@+id/textTransactionAmount"
        android:layout_width="wrap_content"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:text="@string/transaction_amount" />
</LinearLayout>