<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.TransfersFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/transfersAppBar"
            android:layout_width="match_parent"
            app:title="@string/transfers"
            app:titleCentered="true"
            android:layout_height="wrap_content"/>
    </com.google.android.material.appbar.AppBarLayout>
    <TextView
        android:text="@string/select_your_account"
        android:layout_width="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="24sp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/autoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:contentDescription="@string/checking_account"
            android:gravity="center"
            android:minHeight="48dp"
            android:textAlignment="center" />

        <TextView
            android:text="@string/enter_account_to_transfer"
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="24sp"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/receiverAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:hint="@string/type_receiver_account"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <TextView
        android:text="@string/enter_amount"
        android:layout_width="wrap_content"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_marginTop="24sp"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:hint="@string/enter_amount"
        android:inputType="number"
        android:minHeight="48dp" />

    <TextView
        android:text="@string/description"
        android:layout_width="wrap_content"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_marginTop="24sp"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:hint="@string/description"
        android:minHeight="48dp" />


<com.google.android.material.button.MaterialButton
    android:id="@+id/make_transfer_button"
    android:layout_gravity="center"
    app:icon="@drawable/ic_baseline_swap_horiz_24"
    android:text="@string/transfer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>



</LinearLayout>