<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.HomeFragment">

  <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/app_bar_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/app_bar"
        app:titleCentered="true"
        app:menu="@menu/app_bar_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

  </com.google.android.material.appbar.AppBarLayout>


  <LinearLayout
      android:layout_below="@+id/app_bar_layout"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
  <com.google.android.material.card.MaterialCardView
      android:layout_marginTop="6dp"
      android:layout_width="match_parent"
      android:layout_height="60dp">
    <!-- notification card -->
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
      <!-- Media -->
      <ImageView
          android:src="@drawable/ic_baseline_notifications_24"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
      <!-- Text -->
      <TextView
          android:id="@+id/home_notification"
          android:textStyle="bold"
          android:textSize="18sp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/home_daily_notification_news"
          />
       </LinearLayout>
  </com.google.android.material.card.MaterialCardView>
    <!-- end of notification card -->

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/checking_card_view"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_margin="12dp"
        android:layout_height="wrap_content">
      <LinearLayout
          android:gravity="center"
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
        <TextView
            android:text="@string/checking_account"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/amount"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <View
            android:layout_width="match_parent"
            android:background="@color/black"
            android:layout_height="1dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/checking_transaction_preview"
            android:layout_width="match_parent"
            android:layout_height="120dp"/>
        <View
            android:layout_width="match_parent"
            android:background="@color/black"
            android:layout_height="1dp"
            />
      </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/credit_card_view"
        android:layout_width="match_parent"
        android:layout_margin="12dp"
        android:layout_height="wrap_content">
      <LinearLayout
          android:gravity="center"
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
        <TextView
            android:text="@string/credit_card"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/amount"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <View
            android:layout_width="match_parent"
            android:background="@color/black"
            android:layout_height="1dp"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/credit_transaction_preview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
      </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/saving_card_view"
        android:layout_width="match_parent"
        android:layout_margin="12dp"
        android:layout_height="wrap_content">
      <LinearLayout
          android:gravity="center"
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
        <TextView
            android:text="@string/saving_account"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/amount"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <View
            android:layout_width="match_parent"
            android:background="@color/black"
            android:layout_height="1dp"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/saving_transaction_preview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
      </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
  </LinearLayout>

</RelativeLayout>